Contact page complete. Need to rework in future according to TODO; Links to empty pages was commented in layout (preparation to early go live); Alert was wrapped with fixed div, now it doesn't ruin layout;

--- a/css/common.css
+++ b/css/common.css
@@ -133,6 +133,12 @@ a:active {
     transition: .5s;
 }
 
+.alert_box {
+    position: fixed;
+    z-index: 1001;
+    width: 100%;
+    margin-top: 100px;
+}
 .alert {
     width: 50%;
     margin: 20px auto;
